Bug116:Maha:Fixed size and alignment of icons

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -314,3 +314,8 @@ textarea {
 .popup-body {
    color: black;
 }
+
+button.custom-icon:before {
+    font-size: 22px !important;
+    padding-bottom: 50px !important;
+}
